<?xml version="1.0"?>
<package>
  <name>signal_strength</name>
  <version>0.0.0</version>
  <description>signal_strength</description>

  <maintainer email="fmascarich@nevada.unr.edu">frank</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>


  <run_depend>message_runtime</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>



</package>
